[package]
name = "egui-wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
wgpu = "0.14"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.2"

egui = "0.20.1"
eframe = { version = "0.20.1", features = ["wgpu"] }
egui-winit = "0.20.1"
egui-wgpu = "0.20.0"

egui_demo_lib = "0.20.0"